Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44823

Incorrect /VERSION in Makefiles

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.5.0 Beta
    • 4.8.6, 5.4.1
    • Build tools: qmake
    • None
    • Windows 8.1 x64
      Qt 5.4.1
      Microsoft Visual Studio 2013
    • fa1b2dc4a012c3dc11db35f6b33a41d326b820b6

    Description

      In my .pro file I have the following:
      VERSION = 2.15.2.3293
      DEFINES += VERSION=\\\"$$VERSION\\\"

      When compiling, the makefiles for Debug and Release get the following LFLAGS entries:
      LFLAGS = /DEBUG /DLL /VERSION:2.1523293

      The following error occurs when linking:
      LINK : fatal error LNK1147: invalid number specified with option '/VERSION:2.1523293'

      It compiles (cl) using the correct correct version flag -DVERSION=\"2.15.2.3293\"

      If I shorten the version number to "2.15.2.3" for example, it compiles correctly.

      Please see the attached project that demonstrates the issue.

      Unfortunately my project must use this build number format to comply with the coding standards of my employer.

      Any advise/assistance would be most appreciated.

      Thank you.

      Attachments

        For Gerrit Dashboard: QTBUG-44823
        # Subject Branch Project Status CR V

        Activity

          People

            moellney Michael Möllney
            polla_tosen@yahoo.com Polla Tosen
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes